--- a/kvm_demo/service1/template/web/var/www/html/index.html
+++ b/kvm_demo/service1/template/web/var/www/html/index.html
@@ -1,2 +1,2 @@
-Hellow.This is {{ hostname }} in {{ container_name }} at {{ service.name }} on vlan {{ service.vlanid }}.
+Hello.This is {{ hostname }} in {{ container_name }} at {{ service.name }} on vlan {{ service.vlanid }}.
 
